--- a/app/src/main/res/layout/content_main_screen.xml
+++ b/app/src/main/res/layout/content_main_screen.xml
@@ -102,4 +102,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.44" />
+
+    <Button
+        android:id="@+id/profileButton"
+        android:layout_width="45dp"
+        android:layout_height="44dp"
+        android:background="@drawable/icons8_user_male_circle_filled_25px"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.986"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.025" />
 </android.support.constraint.ConstraintLayout>
