SendMyCard button now has a working animation when clicking

--- a/app/src/main/res/layout/content_main_screen.xml
+++ b/app/src/main/res/layout/content_main_screen.xml
@@ -9,7 +9,6 @@
     tools:showIn="@layout/activity_main_screen">
 
 
-
     <Button
         android:id="@+id/myCard"
         android:layout_width="311dp"
@@ -30,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="13dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:contentDescription="@string/camera"
@@ -39,8 +38,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.437"
+        app:layout_constraintTop_toBottomOf="@+id/myCard"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@android:drawable/ic_menu_camera" />
 
     <ImageButton
@@ -57,8 +56,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.437"
+        app:layout_constraintTop_toBottomOf="@+id/myCard"
+        app:layout_constraintVertical_bias="0.014"
         app:srcCompat="@android:drawable/ic_menu_edit" />
 
     <ImageButton
@@ -66,7 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="13dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:contentDescription="@string/uploadCard"
@@ -75,8 +74,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.663"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.437"
+        app:layout_constraintTop_toBottomOf="@+id/myCard"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@android:drawable/ic_menu_upload" />
 
     <Button
@@ -87,7 +86,10 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:src="@android:drawable/btn_default"
         android:background="@color/colorGreen"
+        android:foreground="?android:attr/selectableItemBackground"
+
         android:drawableTop="@android:drawable/ic_menu_send"
         android:drawablePadding="-10dp"
         android:padding="8dp"
@@ -96,8 +98,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.576" />
+        app:layout_constraintTop_toBottomOf="@+id/edit"
+        app:layout_constraintVertical_bias="0.042" />
 
     <Button
         android:id="@+id/contacts"
